Fixed some layout problems

--- a/styles/PersonalInfo.module.css
+++ b/styles/PersonalInfo.module.css
@@ -22,6 +22,10 @@
   border: 3px solid white;
 }
 
+.contacts {
+  font-size: 9pt;
+}
+
 .careerstep {
   margin: 5px 0;
 }
